--- a/spring-boot-blog-rest-api/src/main/resources/application.properties
+++ b/spring-boot-blog-rest-api/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+jwt.secret.key=${JWT_KEY}
+
+#JWT token expiration time in seconds
+jwt.token.expiration=3600
